--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row">
           <div class="family-members justify-content-between">
             <div class="family-members-inner">
-              <img src="./image/father.JPG" alt="" />
+              <img src="./image/sudip.jpg" alt="" />
               <h3>Mantu Mahato</h3>
               <p>Father</p>
             </div>
